src/test/ui/issues/issue-13407.stderr
error[E0603]: unit struct `C` is private
  --> $DIR/issue-13407.rs:6:8
   |
LL |     A::C = 1;
   |        ^

error[E0308]: mismatched types
  --> $DIR/issue-13407.rs:6:12
   |
LL |     A::C = 1;
   |            ^ expected struct `A::C`, found integer
   |
   = note: expected type `A::C`
              found type `{integer}`

error[E0070]: invalid left-hand side expression
  --> $DIR/issue-13407.rs:6:5
   |
LL |     A::C = 1;
   |     ^^^^^^^^ left-hand of expression not valid

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0070, E0308, E0603.
For more information about an error, try `rustc --explain E0070`.
